# FlowBoard

./: .claude-code-config.json  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_reset_token_fields_to_users.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/attachments/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/comments/: models.py  router.py  schemas.py  service.py
backend/app/common/: __init__.py  permissions.py
backend/app/issues/: models.py  router.py  schemas.py  service.py
backend/app/notifications/: manager.py  models.py  router.py  schemas.py  service.py
backend/app/projects/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/search/: models.py  router.py  schemas.py  service.py
backend/app/sprints/: models.py  router.py  schemas.py  service.py
backend/scripts/: load_test_pool.py  monitor_pool.py  schedule_analyze.sh
backend/tests/: conftest.py  test_health.py  test_schema.py
backend/tests/test_attachments/: test_upload.py
backend/tests/test_auth/: conftest.py  test_login.py  test_reset_password.py
backend/tests/test_comments/: test_crud.py
backend/tests/test_issues/: test_crud.py
backend/tests/test_projects/: test_crud.py  test_labels.py  test_members.py
backend/tests/test_search/: test_search.py
(+157 files in other folders)
